<resources>
    <string name="app_name">Notifry</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="error_message_neutral_button">OK</string>

    <string-array name="actions">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
    </string-array>

    <!--               General                 -->

    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="search">Search</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="information">Information</string>
    <string name="warning">Warning</string>
    <string name="share">Share</string>
    <string name="mail">Mail</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="description">Description</string>
    <string name="none">None</string>
    <string name="permission_read">Read</string>
    <string name="permission_write">Write</string>
    <string name="permission_more">All</string>
    <string name="category">Category</string>
    <string name="add_category">Add category</string>
    <string name="wrong_category">Unknown category, please select another</string>
    <string name="title">Title</string>

    <string-array name="colors">
        <item>#F44336</item>
        <item>#B71C1C</item>
        <item>#E91E63</item>
        <item>#9C27B0</item>
        <item>#673AB7</item>
        <item>#3F51B5</item>
        <item>#2196F3</item>
        <item>#039BE5</item>
        <item>#0097A7</item>
        <item>#009688</item>
        <item>#43A047</item>
        <item>#689F38</item>
    </string-array>

    <!--              Messages                 -->

    <string name="delete_message">Do you really want to delete this?</string>

    <!--                Login                  -->

    <string name="email">EMail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">or login with</string>
    <string name="login_facebook">Facebook</string>
    <string name="login_google">Google</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password</string>
    <string name="not_registered">This email is not registered</string>
    <string name="not_verified">Please verify your email, before login</string>
    <string name="wrong_password">The password is incorrect</string>
    <string name="local">Use local</string>

    <!--              Timetable                -->

    <string name="timetable">Timetable</string>
    <string name="calendar">Calendar</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="events">Events</string>
    <string name="event">Event</string>
    <string name="whole_day">Whole day</string>
    <string name="repeat">Repeat</string>
    <string name="no_participants">No participants</string>
    <string name="notification">Notification</string>
    <string name="time_from">From</string>
    <string name="time_to">To</string>
    <string name="tag">Tag</string>
    <string name="wrong_tag">Unknown tag, please select another</string>
    <string name="entry">Entry</string>
    <string name="add_tag">Add tag</string>
    <string name="no_events">No events available</string>
    <string name="today">Today</string>
    <string name="specific">Specific</string>
    <string name="once">Once</string>
    <string name="interval">Interval</string>
    <string name="frequency">Frequency</string>
    <string name="count">How often?</string>
    <string name="number">Number</string>
    <string name="date_until">Repeat event until</string>

    <string-array name="repeat_array">
        <item>Once</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
        <item>Specific</item>
    </string-array>

    <string-array name="repeat_array_specific">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <!--                Task                   -->

    <string name="todo_list">To-do list</string>
    <string name="task">Task</string>
    <string name="tasks">Tasks</string>

    <!--             Contactlist               -->

    <string name="contacts">Contacts</string>
    <string name="contact_request">Contact request</string>
    <string name="contact_requests">Contact requests</string>
    <string name="new_group">New group</string>
    <string name="assign_to_group">Assign to group</string>
    <string name="name_of_group">Name of group</string>

    <!--                 Time                   -->

    <string name="time_am">AM</string>
    <string name="time_pm">PM</string>

    <!--                 Date                   -->

    <string name="year_leapyear">Leap Year</string>

    <string name="month_jan">January</string>
    <string name="month_feb">February</string>
    <string name="month_mar">March</string>
    <string name="month_apr">April</string>
    <string name="month_may">May</string>
    <string name="month_jun">June</string>
    <string name="month_jul">July</string>
    <string name="month_aug">August</string>
    <string name="month_sep">September</string>
    <string name="month_oct">October</string>
    <string name="month_nov">November</string>
    <string name="month_dec">December</string>

    <string name="weekday_mon">Monday</string>
    <string name="weekday_tue">Tuesday</string>
    <string name="weekday_wed">Wednesday</string>
    <string name="weekday_thu">Thursday</string>
    <string name="weekday_fri">Friday</string>
    <string name="weekday_sat">Saturday</string>
    <string name="weekday_sun">Sunday</string>

    <string name="weekday_mon_short">M</string>
    <string name="weekday_tue_short">T</string>
    <string name="weekday_wed_short">W</string>
    <string name="weekday_thu_short">T</string>
    <string name="weekday_fri_short">F</string>
    <string name="weekday_sat_short">S</string>
    <string name="weekday_sun_short">S</string>

</resources>
