<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/content_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/repeat_monday"
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:background="@drawable/weekday_style"
            android:gravity="center"
            android:textColor="@color/colorTextSecondary"
            android:layout_margin="@dimen/weekday_margin"
            android:text="@string/weekday_mon_short"/>

        <TextView
            android:id="@+id/repeat_tuesday"
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:background="@drawable/weekday_style"
            android:gravity="center"
            android:textColor="@color/colorTextSecondary"
            android:layout_margin="@dimen/weekday_margin"
            android:text="@string/weekday_tue_short"/>

        <TextView
            android:id="@+id/repeat_wednesday"
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:background="@drawable/weekday_style"
            android:gravity="center"
            android:textColor="@color/colorTextSecondary"
            android:layout_margin="@dimen/weekday_margin"
            android:text="@string/weekday_wed_short"/>

        <TextView
            android:id="@+id/repeat_thursday"
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:background="@drawable/weekday_style"
            android:gravity="center"
            android:textColor="@color/colorTextSecondary"
            android:layout_margin="@dimen/weekday_margin"
            android:text="@string/weekday_thu_short"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/repeat_friday"
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:background="@drawable/weekday_style"
            android:gravity="center"
            android:textColor="@color/colorTextSecondary"
            android:layout_margin="@dimen/weekday_margin"
            android:text="@string/weekday_fri_short"/>

        <TextView
            android:id="@+id/repeat_saturday"
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:background="@drawable/weekday_style"
            android:gravity="center"
            android:textColor="@color/colorTextSecondary"
            android:layout_margin="@dimen/weekday_margin"
            android:text="@string/weekday_sat_short"/>

        <TextView
            android:id="@+id/repeat_sunday"
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:background="@drawable/weekday_style"
            android:gravity="center"
            android:textColor="@color/colorTextSecondary"
            android:layout_margin="@dimen/weekday_margin"
            android:text="@string/weekday_sun_short"/>
    </LinearLayout>


</LinearLayout>
