<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:text="@string/app_name"
        android:textColor="@color/colorTextPrimaryDark"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Display3"/>

    <android.support.v7.widget.CardView
        android:id="@+id/cardview_timetable_week_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/login_margin"
        android:layout_marginLeft="@dimen/login_margin"
        android:layout_marginRight="@dimen/login_margin"
        android:elevation="3dp"
        card_view:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/content_padding"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_login_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/elements_margin_small"
                android:layout_marginBottom="@dimen/elements_margin"
                android:layout_marginRight="@dimen/elements_margin_small"
                android:layout_marginLeft="@dimen/elements_margin_small">


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/login_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:text=""
                    android:background="@android:color/transparent"
                    style="@style/Base.TextAppearance.AppCompat.Body2"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/colorBackgroundDark" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/elements_margin"
                android:layout_marginBottom="@dimen/elements_margin_small"
                android:layout_marginRight="@dimen/elements_margin_small"
                android:layout_marginLeft="@dimen/elements_margin_small">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:text=""
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"
                    style="@style/Base.TextAppearance.AppCompat.Body2"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/elements_margin_small"
        android:layout_marginLeft="@dimen/login_margin"
        android:layout_marginRight="@dimen/login_margin">

        <TextView
            android:id="@+id/textview_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimaryDark"
            android:text="@string/register"
            style="@style/Base.TextAppearance.AppCompat.Caption"/>

        <TextView
            android:id="@+id/textview_login_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorTextPrimaryDark"
            android:text="@string/forgot_password"
            style="@style/Base.TextAppearance.AppCompat.Caption"/>

    </RelativeLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_margin"
        android:layout_marginLeft="@dimen/login_margin"
        android:layout_marginRight="@dimen/login_margin"
        android:text="@string/login"
        android:background="@color/colorAccent"
        android:textColor="@color/colorTextPrimary"
        style="@style/Base.TextAppearance.AppCompat.Body2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/elements_margin"
        android:textColor="@color/colorTextPrimaryDark"
        android:text="@string/or"
        style="@style/Base.TextAppearance.AppCompat.Caption"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_margin"
        android:layout_marginRight="@dimen/login_margin"
        android:orientation="horizontal"
        android:weightSum="1">

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/login_facebook"
            android:textColor="@color/colorTextPrimary"
            android:background="#3b5998"
            style="@style/Base.TextAppearance.AppCompat.Body2"/>

        <View
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/login_google"
            android:textColor="@color/colorTextPrimary"
            android:background="#d62d20"
            style="@style/Base.TextAppearance.AppCompat.Body2"/>
    </LinearLayout>


</LinearLayout>
