<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tablelayout_timetable_create"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="7dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/timetable_table_margin">

        <ImageView
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:background="@drawable/ic_subject"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/timetable_create"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/event"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/timetable_table_margin">

        <ImageView
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:background="@drawable/ic_timetable"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/timetable_create"
            android:orientation="vertical"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/whole_day"/>

                <Switch
                    android:id="@+id/switch_timetable_create_whole_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/timetable_date_margin">

                <TextView
                    android:id="@+id/textview_timetable_create_date_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Date"/>

                <TextView
                    android:id="@+id/textview_timetable_create_time_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="Time"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/timetable_date_margin">

                <TextView
                    android:id="@+id/textview_timetable_create_date_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Date"/>

                <TextView
                    android:id="@+id/textview_timetable_create_time_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="Time"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/timetable_date_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/repeat"/>

                <TextView
                    android:id="@+id/switch_timetable_create_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/once"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/timetable_date_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/notification"/>

                <TextView
                    android:id="@+id/switch_timetable_create_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/none"
                    />
            </RelativeLayout>

        </LinearLayout>

    </TableRow>

    <TableRow
        android:id="@+id/textview_timetable_create_participants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/timetable_table_margin">

        <ImageView
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_contacts_dark"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/timetable_create"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/no_participants"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/timetable_table_margin">

        <ImageView
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_edit_dark"/>

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/timetable_create"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/description"/>

    </TableRow>

</TableLayout>